client/src/customer/SearchBar.css
.searchBar {
  display: flex;
  align-items: center;
  background-color: #fff;
  padding: 10px;
  border-radius: 10px;
  box-sizing: border-box;
  margin-block: 10px;
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.15);
  width: 100%;
  height: 45px;
  transition: box-shadow 1s ease;
}

.searchBar input {
  font-family: 'Inter', sans-serif;
  border: none;
  outline: none;
  width: 100%;
  margin-left: 5px;
  font-size: 14px;
  background-color: transparent;
}

.searchBar:focus-within {
  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.35);
  transition: box-shadow 1s ease;
}

.searchBar input::placeholder {
  color: #999999;
}

.searchIcon {
  color: black;
  font-size: 25px;
  padding-inline: 5px;
}

